doc: auth
