# handler/doc.go
@@ -1,0 +1,27 @@
+// Package classification Money Management API
+//
+// Documentation for Money Management API
+//
+// Schemes: http, ws
+// BasePath: /api
+// Version: 1.0.0
+//
+// Consumes:
+// - application/json
+//
+// Produces:
+// - application/json
+//
+// SecurityDefinitions:
+// bearerAuth:
+//   type: apiKey
+//   name: Authorization
+//   in: header
+//   description: Token obtained from loginUser endpoint
+// cookieAuth:
+//   type: apiKey
+//   in: cookie
+//   name: jwt-token
+//
+// swagger:meta
+package handler
